# Trends_in_AI

./: .gitignore  README.md  adversarial_AI.md  bias.md  les10_0_explainability.md  les11_0_AI_Act.md  les11_AI_act.md  les12_0_AI_Act.md  les12_1_ethiek_in_AI.md  les12_2_AI_for_researchers.md  les12_3_AI_for_researchers.md  les1_0_praktisch.md  les1_1_inleiding.md  les1_2_generative_ai_project_lifecycle.md  les1_3_scope_types_llms.md  les1_4_oefen.md  les1_5_oefen.md  les2_0_prompt_engineering.md  les2_3_quantization.md  les3_2_vector_databank.md  les4_0_quantization.md  les5_0_LLM_powered_applications.md  les6_0_finetuning_and_evaluation.md  les7_0_finetuning_and_evaluation.md  les7_0_prompt_injection.md  les7_1_adversarial_AI.md  les7_2_RLHF.md  les7_adversarial_AI_1.md  les7_prompt_injection_0.md  les8_0_bias.md  les8_0_prompt_injection.md  les8_1_adversarial_AI.md  les8_2_RLHF.md  les8_3_AI_gateways.md  les9_0_bias.md  les9_0_explainability.md  main.py  prompt_injection.md  pyproject.toml  ~$les12_2_ethiek_in_AI.pptx
img/: RLHF_motivation.md
notebooks/: Les6_1_quantization_in_depth.ipynb  les10_0_shapley.ipynb  les10_0_shapley_filled.ipynb  les10_1_feature_importance_explainability_in_one_line.ipynb  les10_1_lime.ipynb  les10_2_global_interpretability.ipynb  les10_4_treeSHAP_toy_example.ipynb  les10_5_summary.ipynb  les11_0_shapley.ipynb  les11_0_shapley_filled.ipynb  les11_1_lime.ipynb  les11_2_saliency_mappings.ipynb  les1_4_praktisch.ipynb  les2_0_prompt_engineering_openai.ipynb  les2_0_prompting.ipynb  les2_1_prompt_engineering_llama.ipynb  les9_5_summary.ipynb  (+18 more)
(+12 files in other folders)
