[project]
name = "trends-in-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aif360[adversarialdebiasing,infairness,reductions]>=0.6.1",
    "graphviz>=0.21",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "numpy==2.2.6",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "xgboost>=3.1.2",
]
