[project]
name = "trends-in-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aif360[adversarialdebiasing,infairness,reductions]>=0.6.1",
    "category-encoders>=2.9.0",
    "fastparquet>=2024.11.0",
    "graphviz>=0.21",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.3.13",
    "lime>=0.2.0.1",
    "numpy==2.2.6",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch==2.8.0",
    "xgboost>=3.1.2",
]
